# cogs

./: .gitignore  BOOK.md  Cargo.toml  OPTIMIZATIONS.md  README.md
batteries/: README.md
batteries/stdlib/: Cargo.toml
batteries/stdlib/src/: hyperedge.rs  incidence.rs  lib.rs  methods.rs  nodes.rs
batteries/stdlib/src/incidence/: edging.rs  neighborhood.rs
book/: BOOK.md
crates/client/: Cargo.toml
crates/client/src/: errors.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: global_path.rs  lib.rs  local_path.rs  path.rs
crates/db/: Cargo.toml
crates/db/src/: errors.rs  hyperedge.rs  lib.rs  methods.rs  neighborhood.rs  object_patch.rs  paths.rs  types.rs
crates/db/src/graph/: apply_delta.rs  apply_patch.rs  cascade.rs  constructors.rs  destructors.rs  index.rs  listeners.rs  mod.rs  modifiers.rs  queries.rs
crates/db/src/incidence/: edging.rs  neighborhood.rs
crates/db/src/tests/: lift_events.rs  mod.rs  patch_logging.rs  test_apply_delta.rs  test_apply_object_delta.rs  (+3 more)
crates/jit/: Cargo.toml
crates/jit/src/: lib.rs
crates/jit/tests/: hello_view.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk-macros/: Cargo.toml
crates/sdk-macros/src/: lib.rs
crates/sdk/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/transports/: Cargo.toml
crates/transports/src/: lib.rs
devnotes/: LAYOUT.md  OPTIMIZATIONS.md  TODO.md
examples/hello_view/: Cargo.toml
examples/hello_view/src/: lib.rs
readme_asserts/: gears_source.graphite
src/: main.rs
(+30 files in other folders)
