[workspace]
resolver = "3"
members = [
    "crates/db",
    "crates/client",
    "crates/protocol",
    "crates/transports",
    "crates/common",
    "crates/storage",
    "crates/sdk",
    "crates/sdk-macros",
    "crates/jit",
    # "batteries/common",  # TEMPORARILY COMMENTED — directory missing
]
exclude = ["examples/hello_view"]