[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[dev-dependencies]
transports = { path = "../transports" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
