[package]
name = "transports"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["macros", "rt", "sync", "net", "io-util"] }
bincode = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "io-util", "time"] }
